--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ header {
   text-align: center;
 }
 
+header > h1 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+header > h1::after {
+  content: "OMAI-portal";
+}
+
 footer {
   background-color: #333;
   color: #fff;
